# prose-tapeout

./: .gitignore  README.md  build.sbt
.metals/.reports/metals-full/2025-08-24/: r_empty-definition_18-14-57-647.md
c_exec/: CMakeLists.txt
c_exec/src/: kill.cc
c_exec/src/SRAMEcho/: CMakeLists.txt  echo.cc
c_exec/src/activations/: analyze_exp.py  check_gelu_lut.cc  gelu_lut.cc
c_exec/src/generate_verilog/: generate_exp.cc  generate_exp_exact.cc  generate_normal.cc  generate_reciprocal.cc  util.cc
c_exec/src/model/: Makefile  convert_gptneo.cc  gptneo_clone.py  nn_ops.cc  prose_rptr.h  run_llama2.py
c_exec/src/prose_unit/: Makefile
c_exec/src/prose_unit/hw_impl/include/: float_wrapper.h  prose_impl.h
c_exec/src/prose_unit/hw_impl/src/: float_wrapper.cc
c_exec/src/prose_unit/neo_test/: CMakeLists.txt
c_exec/src/prose_unit/neo_test/gen_ckpts/: calc_gpt_neo_flops.py
c_exec/src/prose_unit/neo_test/src/: attention.cc  attention_small.cc  decoder_small.cc  floatblob2tensor.cc
c_exec/src/prose_unit/unit/: prose_g_unit.cc
c_exec/src/prose_unit/utility/: interchange_format.h  torch_util.cc  torch_util.h  util.cc  util.h
c_exec/src/pytorch_unit/: README.md  pytorch_attention_golden.h  pytorch_decoder_layer_golden.h  test_pytorch_linear_golden.cpp
c_exec/src/utility/: util.cc
src/main/c/: CMakeLists.txt
src/main/c/activations/: CMakeLists.txt  exp_lut.cc
src/main/c/deploy/: CMakeLists.txt  exe_size.py
src/main/c/deploy/basic/: CMakeLists.txt  basic_sanity.cc  core_check.cc  decoder_check.cc  decoder_check_nb.cc  fib.cc  full_check.cc  local_mlp_test.cc  local_output_proj_test.cc  norm_check.cc  sanity_check_m.cc
src/main/c/deploy/include/: auto_allocate.h  prose_lib.h  prose_lib_twt.h  prose_rptr.h  prose_rptr_structured.h  prose_vec_rptr.h
src/main/c/deploy/lib/: prose_decoder_scheduler.cc  prose_lib.cc  prose_lib_twt.cc  prose_rptr.cc
src/main/c/fpu_verif/: fpu_verif.cc
src/main/c/generate_verilog/: CMakeLists.txt  generate_exp_feed.cc  generate_exp_rom.cc  generate_gelu.cc  generate_gelu_exact.cc  generate_gelu_feed.cc  generate_gelu_rom.cc  generate_invsqrt.cc  generate_invsqrt_rom.cc  generate_normal.cc  generate_normal_rom.cc  generate_reciprocal_rom.cc
src/main/c/model/: CMakeLists.txt  Makefile  annotate_synout_with_sdf.py  benchmark_variance.py  convert_bert_tiny.cc  convert_gptneo  convert_gptneo.cc  debug.txt  environment.yml  globals.py  gptneo_clone.py  nn_ops.cc  nn_ops.h  prose_rptr.c  prose_rptr.cc  prose_rptr.h  pyutils.py  run_bert_tiny.py  run_berttiny.py  run_gpt_neo.py  vectorify_rptrs.py
src/main/c/model/gpt_neo/: prose_index.txt
src/main/c/prose_unit/: CMakeLists.txt  breakdown_lst.py  generate_arrays.cc
src/main/c/prose_unit/golden/: CMakeLists.txt
src/main/c/prose_unit/golden/include/: prose_golden.h
src/main/c/prose_unit/golden/src/: prose_golden.cc
src/main/c/prose_unit/hw_impl/: CMakeLists.txt
src/main/c/prose_unit/hw_impl/include/: float_wrapper.h  rtos.h
src/main/c/prose_unit/hw_impl/src/: float_wrapper.cc  prose_impl.cc
src/main/c/prose_unit/neo_test/: CMakeLists.txt
src/main/c/prose_unit/neo_test/gen_ckpts/: convert_ckpt.py  copy_txts_to_kria.sh  decoder_test.py  fetch_from_kria_and_decode.py  gen_torchscript.py  gpt_neo_attn.py  gpt_neo_attn_core.py  gpt_neo_decoder_layer.py  gpt_neo_individual_head_attn.py  gpt_neo_mlp.py  gpt_neo_model.py  gpt_neo_splitted_head.py  neo_sanity.py  test_gpt_neo_mlp.py
src/main/c/prose_unit/neo_test/src/: chris_full_model.cc  decoder.cc  format_equality_test.cc  full_model.cc  mlp.cc  mlp_small.cc
src/main/c/prose_unit/unit/: CMakeLists.txt  prose_e_unit.cc  prose_g_unit.cc  prose_m_unit.cc  unit_norm.cc  unit_random_norm.cc
src/main/c/prose_unit/utility/: CMakeLists.txt  interchange_format.cc  interchange_format.h  kill_sim.cc  torch_util.cc  util.cc
src/main/c/pytorch_unit/: CMakeLists.txt  pytorch_attention_golden.cpp  pytorch_decoder_layer_golden.cpp  pytorch_linear_golden.cpp  pytorch_linear_golden.h  test_pytorch_attention_golden.cpp
src/main/c/utility/: CMakeLists.txt  util.cc  util.h
src/main/scala/prose/: Configs.scala  WithProse.scala  package.scala  prose_rtl.code-workspace
src/main/scala/prose/activations/: ActivationIO.scala  ProseSIMD.scala  Reciprocal.scala  ResourceLookupTable.scala
src/main/scala/prose/deprecated/: AccumulationCore.scala  ChipKitWithM0.scala
src/main/scala/prose/err_handling/: ErrorHandle.scala  ProseErr.scala
src/main/scala/prose/nn_util/: SpecialFunction.scala  SystolicType.scala
src/main/scala/prose/nn_util/norm/: InvSqrt.scala  LayerNormCore.scala  LayerNormStream.scala  Mean.scala  NormType.scala  Variance.scala  layernormtest.scala
src/main/scala/prose/nn_util/residual/: MatAdd.scala  MatAddConfig.scala
src/main/scala/prose/random/: LinearFeedbackShiftRegister.scala  ShiftRegEnableReset.scala
src/main/scala/prose/systolic_array/: OutputStationaryPE.scala  SystolicArray.scala
src/main/scala/prose/systolic_array/util/: Shifts.scala
src/main/scala/prose/toplevel/: BaseCore.scala  Batching.md  EType.scala  GType.scala  MType.scala
