cmake_minimum_required(VERSION 3.15.0)
project(beethoven_deploy)
set(CMAKE_CXX_STANDARD 20)

option(LOCAL OFF)
include_directories(include)
message(STATUS "LOCAL: ${LOCAL}")
set(EXTRA_SOURCES "")
if (${LOCAL})
  add_compile_definitions(LOCAL=1)
  find_package(beethoven REQUIRED)
  set(EXTRA_SOURCES "${EXTRA_SOURCES} lib/kria_lib.cc")
else()
  add_compile_definitions(BAREMETAL=1)
  find_package(beethoven_baremetal REQUIRED)
endif()

beethoven_build(check SOURCES basic/core_check.cc lib/prose_lib.cc)
beethoven_build(full SOURCES basic/full_check.cc lib/prose_lib.cc)
beethoven_build(fib SOURCES basic/fib.cc)